gcc/testsuite/rust/rustc/ui/parser/pat-lt-bracket-2.rs
fn a(B<) {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

